# krono

./: .gitignore  README.md  krono_database.csv  pyproject.toml  rastreador.json
krono/: main.py
rastreador_tempo/: main.py
tests/: test_rastreador_tempo.py
