[tool.poetry]
name = "rastreador-tempo"
version = "0.1.0"
description = ""
authors = ["rafaelmatsumoto <rafaelmatsumoto43@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rastreador-tempo = "rastreador_tempo.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
